--- a/src/styles/Verificacion.css
+++ b/src/styles/Verificacion.css
@@ -111,6 +111,10 @@
     font-size: 1.3rem;
 }
 
+#marg{
+    margin-right: 2.5rem;
+}
+
 
 .formverif input::placeholder {
     font-family: 'Lato', sans-serif;
